--- a/style.css
+++ b/style.css
@@ -61,13 +61,17 @@ header {
   margin-left: 0.5rem;
 }
 
+.status-container {
+  display: flex;
+  align-items: center; 
+  justify-content: flex-start; 
+  gap: 0.25rem; 
+}
+
 .status-text {
   font-size: 0.9rem;
   color: var(--light-text-color);
-  display: flex;
-  align-items: center; /* Aligns the text and button vertically */
-  justify-content: flex-start; /* Aligns the content to the left */
-  gap: 0.25rem;
+  margin: 0; 
 }
 
 .navbar {
