--- a/style.css
+++ b/style.css
@@ -46,8 +46,17 @@ header {
 .logo-circle {
   width: 32px;
   height: 32px;
-  border-radius: 50%;
-  background-color: #c4c4c4; 
+  border-radius: 50%; 
+  overflow: hidden; 
+  display: flex; 
+  align-items: center;
+  justify-content: center;
+}
+
+.logo-circle img {
+  width: 100%; 
+  height: 100%; 
+  object-fit: cover; 
 }
 
 .repo-title {
@@ -137,7 +146,7 @@ header {
   display: flex;
   gap: 1rem;
   border: 1px solid var(--border-color);
-  border-radius: 8px;
+  border-radius: 5px;
   padding: 1rem;
   transition: border 0.3s ease, color 0.3s ease;
   cursor: pointer;
@@ -147,7 +156,7 @@ header {
   width: 100px;
   height: 100px;
   object-fit: cover;
-  border-radius: 4px;
+  border-radius: 5px;
 }
 
 .blog-info {
@@ -198,7 +207,7 @@ header {
 .art-card {
   position: relative;
   overflow: hidden;
-  border-radius: 12px;
+  border-radius: 5px;
   box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
 }
 
